--- a/templates/components/products/custom-green-mattress.html
+++ b/templates/components/products/custom-green-mattress.html
@@ -244,6 +244,8 @@
                         {{/if}}
                     </dl>
                 {{/or}}
+
+                
                 <div class="complete-set-tab">
                     <h5>Complete the Set</h5>
                     <div class="tabs-section">
@@ -258,25 +260,28 @@
                             <div class="first"> <img src="https://cdn11.bigcommerce.com/s-z2qdisybty/images/stencil/1280x1280/products/384/3231/WKQQ02SD-Stacked-wb1548286649_original__51093.1630638982.jpg?c=1" alt=""> </div>
                             <div class="sec">
                                 <h4><a href="#">Malouf Weeknder Shredded Memory Foam Pillow (2 PACK)</a></h4>
-                                <a href="/cart.php?action=add&sku=WKQQ02SD&source=buy_button" id="cart-click-item"><i class="fas fa-plus" id="add"></i></a> 
+                                <!-- <a href="/cart.php?action=add&sku=WKQQ02SD&source=buy_button" id="cart-click-item"><i class="fas fa-plus" id="add"></i></a>  -->
+                                <a href="#"><i class="fas fa-plus" id="add"></i></a>
+
                                 <span class="price">$12.99</span>
                             </div>
                       </div>
                       <div class="rowtab-content">
-                        <div class="first"> <img src="https://cdn11.bigcommerce.com/s-z2qdisybty/images/stencil/1280x1280/products/384/3231/WKQQ02SD-Stacked-wb1548286649_original__51093.1630638982.jpg?c=1" alt=""> </div>
+                        <div class="first"> <img src="https://cdn11.bigcommerce.com/s-z2qdisybty/images/stencil/1280x1280/products/380/3209/GM_cutaway-WB1412608285_original__26919.1630638220.jpg?c=1" alt=""> </div>
                         <div class="sec">
                             <h4><a href="#" >Malouf Gelled Microfiber® + Gel Dough® Layer</a></h4>
-                            <a href="/cart.php?action=add&sku=ZZKKX2GG&_ga=2.232531935.1167043985.1648430507-1538258752.1648430507" id="cart-click-item1"><i class="fas fa-plus" id="add"></i></a>
-                             <span class="price">$59.99</span>
+                            <!-- <a href="/cart.php?action=add&sku=ZZKKX2GG&_ga=2.232531935.1167043985.1648430507-1538258752.1648430507" id="cart-click-item1"><i class="fas fa-plus" id="add"></i></a> -->
+                            <a href="#"><i class="fas fa-plus" id="add"></i></a> 
+                            <span class="price">$59.99</span>
                         </div>
                      </div>
                      <div class="rowtab-content border-0">
                         <div class="first"> <img src="https://cdn11.bigcommerce.com/s-z2qdisybty/images/stencil/1280x1280/products/378/3165/ZZ_MPADZG_ZonedGel_AD_Hero-icon-WB1516136873_original__82197.1630637082.jpg?c=1" alt=""> </div>
                         <div class="sec">
                             <h4><a href="#" >Malouf Zoned Active Dough® + Cooling Gel</a></h4>
-                            <a href="/cart.php?action=add&sku=ZZKKMPADZG&source=buy_button" id="cart-click-item2"><i class="fas fa-plus" id="add"></i></a>
-                            <a href="/cart.php?action=remove&sku=ZZKKMPADZG" id="cart-click-item2"><i class="fas fa-plus" id="add"></i></a>
-                             <span class="price">$129.99</span>
+                            <!-- <a href="/cart.php?action=add&sku=ZZKKMPADZG&source=buy_button" id="cart-click-item2"><i class="fas fa-plus" id="add"></i></a> -->
+                            <a href="#"><i class="fas fa-plus" id="add"></i></a> 
+                            <span class="price">$129.99</span>
                         </div>
                       </div>
                     </section>
